# gree-remote

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
GreeLib/: CMakeLists.txt
GreeLib/include/: device.h  devicedescriptor.h  devicefinder.h  greelib.h
GreeLib/src/: crypto.cpp  crypto.h  device.cpp  devicefinder.cpp  greelib.cpp  protocolutils.cpp  protocolutils.h
GreeRemoteGuiQt/: CMakeLists.txt
GreeRemoteGuiQt/src/: deviceitem.cpp  deviceitem.h  deviceviewmodel.cpp  deviceviewmodel.h  main.cpp  mainwindow.cpp  mainwindow.h
cmake/: clang-format.cmake  clang-tidy.cmake  cppcheck.cmake
